@@ -180,6 +180,3 @@ DbStatusDialog::~DbStatusDialog()
 {
     delete ui;
 }
-
-void DbStatusDialog::showEvent(QShowEvent*)
-{}
