@@ -232,6 +232,3 @@ bool FolderContentsDialog::isFilterCreatingEnabled()
 {
     return ui->checkBox_CreateFilter->isChecked();
 }
-
-void FolderContentsDialog::showEvent(QShowEvent*)
-{}
