@@ -1,8 +1,9 @@
 Veretino 0.3.3 (dev)
-* Added icons to database items and to the list of file types in the Folder Content analyzer.
 * Settings and layout are now saved between sessions.
+* Added icons to database items and to the list of file types in the Folder Content analyzer.
 * Added the ability to hide some columns (now also for the file system view).
 * Improved checksum summary file handling.
+* Enabled centering of messages and dialog boxes.
 
 Veretino 0.3.2
 * Added the ability to create a global Filter based on the Folder Content analyzer.
